syntax = "proto3";

package auth;

option go_package = ".;authpb";

service AuthService{
    rpc Login(LoginRequest)returns(LoginResponse);
    rpc Register(ReqisterRequest)returns(ReqisterResponse);
    rpc IsTokenValid(TokenRequest)returns(TokenResponse);
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message ReqisterRequest{
    string email = 1;
    string password = 2;
}

message ReqisterResponse{
    string register_message = 1;
}

message TokenRequest{
    string token = 1;
}

message TokenResponse {
  bool valid = 1;          
  string user_id = 2;      
  string token_message = 3;       
}
